objects/grax__GRAX_Data_Record_Id__c.object
<CustomObject>
    <description>This object contains the specific Salesforce record id which will be backed up/archived as part of the GRAX Scheduled process. These records are automatically deleted at the conclusion of a successful GRAX Scheduled Process.</description>
    <fields>
        <fullName>grax__Can_Delete_GRAX_Record__c</fullName>
        <description>Field Used for Internal Auditing</description>
        <formula>grax__GRAX_Data_Record__r.grax__GRAX_Schedule_Process__c = null ||
    grax__GDRI_Status_Helper__c != grax__GRAX_Data_Record__r.grax__GDRI_Status_Helper__c ||
  (
    $Setup.grax__GRAXSettings__c.grax__Use_Bulk_API__c == false &amp;&amp;
    (
      (
        NOT(grax__GRAX_Data_Record__r.grax__GRAX_Schedule_Process__r.grax__Is_Running__c) &amp;&amp;
        DATEVALUE(CreatedDate) &lt; TODAY() - 15
      ) ||
      (
        grax__GRAX_Data_Record__r.grax__GRAX_Schedule_Process__r.grax__Execution_Unique_Key__c != grax__Execution_Unique_Key__c
      ) ||
      (
        /* This block main condition is that the GDR is Sent Successful */
        ISPICKVAL(grax__GRAX_Data_Record__r.grax__Status__c, &apos;Sent Successful&apos;) &amp;&amp;
        (
          /* Additionally, any of the following conditions should meet:
            - Is a normal Salesforce Object (not Async File object)
            - GDRI is Sent to GRAX (specific condition for Async File objects, when it is not an Archive process)
            - The related Archive Process has the Can Delete GRAX Record flag set to True (specific condition for Async Files on an Archive process)
          */
          NOT(grax__GRAX_Data_Record__r.grax__Is_Async_Salesforce_Object__c) ||
          ISPICKVAL(grax__Status__c, &apos;Sent to GRAX&apos;) ||
          grax__GRAX_Data_Record__r.grax__GRAX_Archive_Process__r.grax__Can_Delete_GRAX_Record__c
        ) &amp;&amp;
        (
          /*
            If it is a Multi-Object process, we can delete the GDRI if previous conditions met */
          NOT(ISPICKVAL(grax__GRAX_Data_Record__r.grax__GRAX_Schedule_Process__r.grax__type__c, &apos;Hierarchy&apos;)) ||
          (
            /*
              If it is a Hierarchy process, and, previous conditions met, we still need to verify the following conditions, in order to delete the GDRI record:
                - If is not an Archive process, then check that GSP is not running
                - If is an Archive process, then check that the related Archive Process record has the Can Delete GRAX Record flag set to True, and, GDRI is not Delete Error
            */
            (
              ISBLANK(grax__GRAX_Data_Record__r.grax__GRAX_Archive_Process__c) &amp;&amp;
              NOT(ISPICKVAL(grax__GRAX_Data_Record__r.grax__GRAX_Schedule_Process__r.grax__Status__c, &apos;Finding Data&apos;))
            ) ||
            (
              NOT(ISBLANK(grax__GRAX_Data_Record__r.grax__GRAX_Archive_Process__c)) &amp;&amp;
              grax__GRAX_Data_Record__r.grax__GRAX_Archive_Process__r.grax__Can_Delete_GRAX_Record__c &amp;&amp;
              NOT(ISPICKVAL(grax__Status__c, &apos;Delete Error&apos;))
            )
          )
        )
      )
    )
  )</formula>
        <label>Can Delete GRAX Record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>grax__Error_Description__c</fullName>
        <description>Description of the Error Message received</description>
        <label>Error Description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>grax__Execution_Unique_Key__c</fullName>
        <description>Field Used for Internal Auditing</description>
        <label>Execution Unique Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax__GDRI_Status_Helper__c</fullName>
        <label>GDRI Status Helper</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>grax__GRAX_Data_Record__c</fullName>
        <description>Relationship to related GRAX_Data_Record</description>
        <label>GRAX Data Record</label>
        <referenceTo>grax__GRAX_Data_Record__c</referenceTo>
        <relationshipLabel>GRAX Data Record Ids</relationshipLabel>
        <relationshipName>GRAX_Data_Record_Ids</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>grax__Last_Time_Check_Async_Record_Backup__c</fullName>
        <description>Last time this GRAX Async Record was verified to be fully backed up</description>
        <inlineHelpText>Last time this GRAX Async Record was verified to be fully backed up</inlineHelpText>
        <label>Last Time Check Async Record Backup</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>grax__Pending_Set_As_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if the Salesforce&apos;s record was successfully deleted, but that information was not sent to GRAX</description>
        <label>Pending Set As Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>grax__Processed_Child_Index__c</fullName>
        <description>Processed_Child_Index</description>
        <label>Processed Child Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grax__SFDC_Id__c</fullName>
        <description>Field Used for Internal Auditing</description>
        <label>SFDC Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax__Status__c</fullName>
        <description>Status of the process</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To be Deleted</fullName>
                </value>
                <value>
                    <fullName>Parent Object - Not Delete</fullName>
                </value>
                <value>
                    <fullName>Deleted with Master Parent</fullName>
                </value>
                <value>
                    <fullName>Successfully Deleted</fullName>
                </value>
                <value>
                    <fullName>Delete Error</fullName>
                </value>
                <value>
                    <fullName>Sent to GRAX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>grax__of_Attempts_to_Delete__c</fullName>
        <defaultValue>0</defaultValue>
        <description># of tries deleting this record from SF. Max of 3 attempts</description>
        <label># of Attempts to Delete</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GRAX Data Record Id</label>
    <nameField>
        <displayFormat>GRAX-RecId-{000000000}</displayFormat>
        <label>GRAX Data Record Id Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GRAX Data Record Ids</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>